--- a/projects/project-overview.html
+++ b/projects/project-overview.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Projects - STADS Python Course HWS 2024</title>
 	<link rel="stylesheet" href="/assets/css/style.css">
-	<script src="http://www.w3schools.com/lib/w3data.js"></script>
+	<script src="https://www.w3schools.com/lib/w3data.js"></script>
 </head>
 <body>
 	<div w3-include-html="/assets/html/header.html" class="header"></div>
