added github repository

--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -11,9 +11,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/weeks/week-overview.html">Lecture Weeks</a></li>
+                <li><a href="/sessions/session-overview.html">Sessions</a></li>
                 <li><a href="/projects/project-overview.html">Projects</a></li>
-                <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/mograev/stads-python-course"><img src="/assets/img/github.png">GitHub</a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/STADS-Mannheim/python-course-2024"><img src="/assets/img/github.png">GitHub</a></li>
                 <li><a href="/resources/resources-overview.html">Additional Resources</a></li>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
