--- a/projects/project-1.html
+++ b/projects/project-1.html
@@ -17,15 +17,14 @@
 			<h3>Task</h3>
 			<p>Create a band name generator. Ask the user for the name of the city they grew up in and the name of their first pet. Then print the band name as a concatenation of both.</p>
 
-			<a target="_blank" rel="noopener noreferrer" href="#" class="github-button">GitHub folder</a>
+			<a target="_blank" rel="noopener noreferrer" href="https://github.com/STADS-Mannheim/python-course-2024/tree/main/Project_01_Band_Name_Generator" class="github-button">GitHub folder</a>
 
-			<button class="accordion">Help</button>
+			<button class="accordion">Hints</button>
 			<div class="accordion-panel">
 				<ol>
-					<li>Create a band name generator.</li>
-					<li>Ask the user for the name of the city they grew up in.</li>
-					<li>Ask the user for the name of their pet.</li>
-					<li>Combine the name of their city and pet and show them their band name.</li>
+					<li>Create a varibale named <i>city</i> and ask the user for an input.</li>
+					<li>Create a variable named <i>pet</i> and ask the user for an input.</li>
+					<li>Print the concatenation of both <i>city</i> and <i>pet</i>.</li>
 				</ol>
 			</div>
 		</div>
