--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<div class="content-plain">
 			<h1>Welcome!</h1>
 			<p>This website contains all relevant information for the Python course offered by <a href="https://stads.uni-mannheim.de/">STADS</a> (Students Association for Data Analysis and Statistics) and the <a href="https://www.uni-mannheim.de/">University of Mannheim</a>.</p>
-			<p>We will have eight course sessions from <b>24.09.-12.11.</b> in <b>SN 163 Manfred Lautenschläger Hörsaal</b>. An additional Q&A Session will be held on <b>19.11.</b> Finally, the exam will take place on <b>26.11.</b></p>
+			<p>We will have eight course sessions from <b>24.09.-12.11.</b> in <b>SN 163 Manfred Lautenschläger Hörsaal</b>, from <b>19:00-20:30</b>. It is also possible to participate online via Zoom. You can find the Zoom link in <a href="https://portal2.uni-mannheim.de/portal2/pages/startFlow.xhtml?_flowId=detailView-flow&_flowExecutionKey=e1s1">Portal<sup>2</sup></a>. An additional Q&A Session will be held on <b>19.11.</b> Finally, the exam will take place on <b>26.11.</b></p>
 			<p>Before the first session, please make sure you completed the <a href="#setup">setup</a>.</p>
 			<p>All materials will be provided in English, as is typical in the data science world. We will decide in the first session whether the sessions themselves will be held in English or German. In any case, you can contact me in either language.</p>
 			<p>This course mainly consist of two parts:</p>
 			<ul>
 				<li><b>Introduction</b> to the topic by working through the <a href="https://www.w3schools.com/python/default.asp">w3schools Python Tutorial</a>. The interactive exercises allow us to learn Python efficiently, while focusing directly on its application.</li>
-				<li><b>Hands-on</b> coding projects to reinforce and deepen your knowledge of the fundamentals you have learned. You will be able to directly apply and combine newly learned material to complete mini-projects provided on the <a href="https://github.com/mograev/stads-python-course">GitHub site</a>. The proportion of hands-on projects will increase over time.</li>
+				<li><b>Hands-on</b> coding projects to reinforce and deepen your knowledge of the fundamentals you have learned. You will be able to directly apply and combine newly learned material to complete mini-projects provided on the <a href="https://github.com/STADS-Mannheim/python-course-2024">GitHub site</a>. The proportion of hands-on projects will increase over time.</li>
 			</ul>
 			
 
@@ -27,7 +27,7 @@
 			<ol>
 				<li><b>Python.</b> We will be using Python 3.12 for this course. There are many ways to install Python. If you haven't done so yet, you could use <a href="https://docs.python-guide.org/starting/installation/">Miniconda</a>.</li>
 				<li><b>VS Code.</b> We will be working a lot with Jupyter Notebooks. You can use Jupyter Notebooks in your browser, but it is recommended to use <a href="https://code.visualstudio.com/download">Visual Studio Code</a>. Make sure to install the <i>Python</i> and <i>Jupyter</i> Extensions in VS Code.</li>
-				<li><b>Git.</b> All code will be provided in a GitHub repository<br><span class="code">https://github.com/mograev/stads-python-course.git</span><br>If you haven't already done so yet, you can install Git as described below. Alternatively, you may find it easier to use <a href="https://desktop.github.com/download/">Github Desktop</a>.
+				<li><b>Git.</b> All code will be provided in a GitHub repository<br><span class="code">https://github.com/STADS-Mannheim/python-course-2024.git</span><br>If you haven't already done so yet, you can install Git as described below. Alternatively, you may find it easier to use <a href="https://desktop.github.com/download/">Github Desktop</a>.
 					<ul>
 						<li>Windows: Download <a href="https://community.chocolatey.org/packages/git">Git for Windows</a> or just type in your admin powershell<br><span class="code">choco install git</span></li>
 						<li>Mac: Download <a href="https://formulae.brew.sh/formula/git">Git for Mac</a> or just type in your terminal<br><span class="code">brew install git</span></li>
