--- a/resources/links.html
+++ b/resources/links.html
@@ -6,6 +6,7 @@
 	<title>Additional Resources - STADS Python Course HWS 2024</title>
 	<link rel="stylesheet" href="assets/css/style.css">
 	<script src="https://www.w3schools.com/lib/w3data.js"></script>
+    <link rel="icon" href="/assets/img/stads.png" type="image/x-icon" />
 </head>
 <body>
 	<div w3-include-html="/assets/html/header.html" class="header"></div>
@@ -23,9 +24,9 @@
 
 			<h2 id="cheatsheets">Cheatsheets</h2>
 			<ul>
-                <li><a href="../docs/Python_Cheat_Sheet.pdf">Python Basics Cheatsheet</a></li>
-                <li><a href="../docs/Numpy_Cheat_Sheet.pdf">Datacamp Numpy Cheatsheet</a></li>
-                <li><a href="../docs/Pandas_Cheat_Sheet.pdf">Datacamp Pandas Cheatsheet</a></li>
+                <li><a href="../assets/docs/Python_Cheat_Sheet.pdf">Python Basics Cheatsheet</a></li>
+                <li><a href="../assets/docs/Numpy_Cheat_Sheet.pdf">Datacamp Numpy Cheatsheet</a></li>
+                <li><a href="../assets/docs/Pandas_Cheat_Sheet.pdf">Datacamp Pandas Cheatsheet</a></li>
 				<li><a href="https://ipgp.github.io/scientific_python_cheat_sheet/">Scientific Python Cheatsheet</a></li>
 				<li><a href="https://www.pythoncheatsheet.org/modules/random-module">Python Random Module Cheatsheet</a></li>
             </ul>
