--- a/resources/resources-overview.html
+++ b/resources/resources-overview.html
@@ -6,6 +6,7 @@
 	<title>Additional Resources - STADS Python Course HWS 2024</title>
 	<link rel="stylesheet" href="assets/css/style.css">
 	<script src="https://www.w3schools.com/lib/w3data.js"></script>
+    <link rel="icon" href="/assets/img/stads.png" type="image/x-icon" />
 </head>
 <body>
 	<div w3-include-html="/assets/html/header.html" class="header"></div>
