--- a/resources/vscode-extensions.html
+++ b/resources/vscode-extensions.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Additional Resources - STADS Python Course HWS 2024</title>
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="/assets/css/style.css">
 	<script src="https://www.w3schools.com/lib/w3data.js"></script>
     <link rel="icon" href="/assets/img/stads.png" type="image/x-icon" />
 </head>
