added week 2 and project 2

--- a/projects/sidenav.html
+++ b/projects/sidenav.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="project-overview.html">Overview</a></li>
             <li><a href="project-1.html">Project 1</a></li>
+            <li><a href="project-2.html">Project 2</a></li>
             <li><a href="#">o o o</a></li>
         </ul>
     </aside>
