--- a/resources/vscode-extensions.html
+++ b/resources/vscode-extensions.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Additional Resources - STADS Python Course HWS 2024</title>
+	<title>VS Code Extensions - STADS Python Course HWS 2024</title>
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<script src="https://www.w3schools.com/lib/w3data.js"></script>
     <link rel="icon" href="/assets/img/stads.png" type="image/x-icon" />
@@ -12,7 +12,6 @@
 	<div w3-include-html="/assets/html/header.html" class="header"></div>
 	<div class="container">
 		<div w3-include-html="sidenav.html" class="sidenav"></div>
-        <!--- Resources Overview --->
 		<div class="content-aside">
 			<h1>VS Code Extensions</h1>
 
