--- a/projects/project-overview.html
+++ b/projects/project-overview.html
@@ -15,10 +15,11 @@
         <!--- Project Overview --->
 		<div class="content-aside">
 			<h1>Project Overview</h1>
-			<p>We will work on several projects, that will increase in number and size in the coming weeks. For now, you can find information about the projects from the first two sessions here and on <a href="https://github.com/STADS-Mannheim/python-course-2024">GitHub</a>.</p>
+			<p>We will work on several projects, that will increase in number and size in the coming weeks. For now, you can find information about the projects from the first three sessions here and on <a href="https://github.com/STADS-Mannheim/python-course-2024">GitHub</a>.</p>
 			<ol>
 				<li><a href="project-1.html">Band Name Generator</a></li>
 				<li><a href="project-2.html">Love Calculator</a></li>
+				<li><a href="project-3.html">Random Number Guesser</a></li>
 			</ol>
 		</div>
 	</div>
