--- a/projects/sidenav.html
+++ b/projects/sidenav.html
@@ -11,6 +11,7 @@
             <li><a href="project-overview.html">Overview</a></li>
             <li><a href="project-1.html">Project 1</a></li>
             <li><a href="project-2.html">Project 2</a></li>
+            <li><a href="project-3.html">Project 3</a></li>
             <li><a href="#">o o o</a></li>
         </ul>
     </aside>
