update website index python install

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			<h2 id="setup">Setup</h2>
 			<ol>
-				<li><b>Python.</b> We will be using Python 3.12 for this course. There are many ways to install Python. If you haven't done so yet, you could use <a href="https://docs.python-guide.org/starting/installation/">Miniconda</a>.</li>
+				<li><b>Python.</b> We will be using Python 3.12 for this course. There are many ways to install Python. If you haven't done so yet, you could use <a href="https://docs.anaconda.com/miniconda/">Miniconda</a> or install Python <a href="https://www.python.org/downloads/">globally</a>.</li>
 				<li><b>VS Code.</b> We will be working a lot with Jupyter Notebooks. You can use Jupyter Notebooks in your browser, but it is recommended to use <a href="https://code.visualstudio.com/download">Visual Studio Code</a>. Make sure to install the <i>Python</i> and <i>Jupyter</i> Extensions in VS Code.</li>
 				<li><b>Git.</b> All code will be provided in a GitHub repository<br><span class="code">https://github.com/STADS-Mannheim/python-course-2024.git</span><br>If you haven't already done so yet, you can install Git as described below. Alternatively, you may find it easier to use <a href="https://desktop.github.com/download/">Github Desktop</a>.
 					<ul>
