--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<p>This website contains all relevant information for the Python course offered by <a href="https://stads.uni-mannheim.de/">STADS</a> (Students Association for Data Analysis and Statistics) and the <a href="https://www.uni-mannheim.de/">University of Mannheim</a>.</p>
 			<p>We will have eight course sessions on Tuesdays from <b>24.09.-12.11.</b> in <b>SN 163 Manfred Lautenschläger Hörsaal</b>, from <b>19:00-20:30</b>. It is also possible to participate online via Zoom. You can find the Zoom link in <a href="https://portal2.uni-mannheim.de/portal2/pages/startFlow.xhtml?_flowId=detailView-flow&_flowExecutionKey=e1s1">Portal<sup>2</sup></a>. An additional Q&A Session will be held on <b>19.11.</b> Finally, the exam will take place on <b>26.11.</b></p>
 			<p>Before the first session, please make sure you completed the <a href="#setup">setup</a>.</p>
-			<p>All materials will be provided in English, as is typical in the data science world. We will decide in the first session whether the sessions themselves will be held in English or German. In any case, you can contact me in either language.</p>
+			<p>All materials will be provided in English, as is typical in the data science world. The sessions themselves will be held in German. You can contact me in either language.</p>
 			<p>This course mainly consist of two parts:</p>
 			<ul>
 				<li><b>Introduction</b> to the topic by working through the <a href="https://www.w3schools.com/python/default.asp">w3schools Python Tutorial</a>. The interactive exercises allow us to learn Python efficiently, while focusing directly on its application.</li>
