added week 5 and 6

--- a/projects/sidenav.html
+++ b/projects/sidenav.html
@@ -12,6 +12,8 @@
             <li><a href="project-1.html">Project 1</a></li>
             <li><a href="project-2.html">Project 2</a></li>
             <li><a href="project-3.html">Project 3</a></li>
+            <li><a href="project-4.html">Project 4</a></li>
+            <li><a href="project-5.html">Project 5</a></li>
             <li><a href="#">o o o</a></li>
         </ul>
     </aside>
