added week 7 and 8

--- a/projects/project-4.html
+++ b/projects/project-4.html
@@ -14,6 +14,7 @@
 		<div w3-include-html="sidenav.html" class="sidenav"></div>
 		<div class="content-aside">
 			<h1>4: Programming Languages</h1>
+			<h3>Task</h3>
 			<p>In this project, we analyze the popularity of various programming languages over time using data from Stack Overflow. The dataset includes the number of posts per month for different programming languages, starting from September 2008. We'll explore this data using Pandas for data manipulation and Matplotlib for visualizing trends.</p>
 			<p><i>Key Tasks:</i></p>
 			<ol>
