--- a/projects/project-overview.html
+++ b/projects/project-overview.html
@@ -22,6 +22,7 @@
 				<li><a href="project-3.html">Random Number Guesser</a></li>
 				<li><a href="project-4.html">Programming Languages</a></li>
 				<li><a href="project-5.html">Software Engineers</a></li>
+				<li><a href="project-6.html">Google Trends</a></li>
 			</ol>
 		</div>
 	</div>
