--- a/projects/sidenav.html
+++ b/projects/sidenav.html
@@ -14,7 +14,7 @@
             <li><a href="project-3.html">Project 3</a></li>
             <li><a href="project-4.html">Project 4</a></li>
             <li><a href="project-5.html">Project 5</a></li>
-            <li><a href="#">o o o</a></li>
+            <li><a href="project-6.html">Project 6</a></li>
         </ul>
     </aside>
 </body>
