--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="content-plain">
 			<h1>Welcome!</h1>
 			<p>This website contains all relevant information for the Python course offered by <a href="https://stads.uni-mannheim.de/">STADS</a> (Students Association for Data Analysis and Statistics) and the <a href="https://www.uni-mannheim.de/">University of Mannheim</a>.</p>
-			<p>We will have eight course sessions on Tuesdays from <b>24.09.-12.11.</b> in <b>SN 163 Manfred Lautenschläger Hörsaal</b>, from <b>19:00-20:30</b>. It is also possible to participate online via Zoom. You can find the Zoom link in <a href="https://portal2.uni-mannheim.de/portal2/pages/startFlow.xhtml?_flowId=detailView-flow&_flowExecutionKey=e1s1">Portal<sup>2</sup></a>. An additional Q&A Session will be held on <b>19.11.</b> Finally, the exam will take place on <b>26.11.</b> More information about the exam can be found <a href="#exam">here</a>.</p>
+			<p>We will have eight course sessions on Tuesdays from <b>24.09.-12.11.</b> in <b>SN 163 Manfred Lautenschläger Hörsaal</b>, from <b>19:00-20:30</b>. It is also possible to participate online via Zoom. You can find the Zoom link in <a href="https://portal2.uni-mannheim.de/portal2/pages/startFlow.xhtml?_flowId=detailView-flow&_flowExecutionKey=e1s1">Portal<sup>2</sup></a>. An additional Q&A Session will be held on <b>19.11.</b> Finally, the exam will take place on <b>26.11.</b> or alternatively <b>28.01.</b> More information about the exam can be found <a href="#exam">here</a>.</p>
 			<p>Before the first session, please make sure you completed the <a href="#setup">setup</a>.</p>
 			<p>All materials will be provided in English, as is typical in the data science world. The sessions themselves will be held in German. You can contact me in either language.</p>
 			<p>This course mainly consist of two parts:</p>
@@ -24,8 +24,8 @@
 			</ul>
 
 			<h2 id="exam">Exam</h2>
-			<p>The Python course exam will take place on 26 November 2024 at 7 pm.</p>
-			<p>Please register for the exam <a href="https://forms.office.com/e/0X1fAEbKEw">here</a>.</p>
+			<p>The alternate Python course exam will take place on 28 January 2025 at 7 pm.</p>
+			<p>Please register for the exam <a href="https://forms.office.com/e/aUFnmCgzJh">here</a>.</p>
 			<p>Important for WiMa Bachelor students: If you would like to have the course credited as a “Schlüsselqualifikation”, it is mandatory that you register in ILIAS course and register in Portal2 for the exam “Programmierkurs Python”. The registration deadlines of the University of Mannheim apply here.</p>
 			<p>The SQ exam will take place in the lecture hall as a BYOD (Bring Your Own Device) exam. For all others it will be an at-home exam. More detailed information about the exam will be announced in time.</p>
 
