--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>STADS Python Course HWS 2024</title>
+	<title>STADS Python Course HWS 2025</title>
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<script src="https://www.w3schools.com/lib/w3data.js"></script>
     <link rel="icon" href="/assets/img/stads.png" type="image/x-icon" />
@@ -13,7 +13,7 @@
 	<div class="container">
 		<div class="content-plain">
 			<h1>Welcome!</h1>
-			<p>This website contains all relevant information for the Python course offered by <a href="https://stads.uni-mannheim.de/">STADS</a> (Students Association for Data Analysis and Statistics) and the <a href="https://www.uni-mannheim.de/">University of Mannheim</a>.</p>
+			<p>This website contains all relevant information for the Python course offered by <a href="https://www.stads.de/" target="_blank">STADS</a> (Students Association for Data Analysis and Statistics) and the <a href="https://www.uni-mannheim.de/" target="_blank">University of Mannheim</a>.</p>
 			<p>We will have eight course sessions on Tuesdays from <b>24.09.-12.11.</b> in <b>SN 163 Manfred Lautenschläger Hörsaal</b>, from <b>19:00-20:30</b>. It is also possible to participate online via Zoom. You can find the Zoom link in <a href="https://portal2.uni-mannheim.de/portal2/pages/startFlow.xhtml?_flowId=detailView-flow&_flowExecutionKey=e1s1">Portal<sup>2</sup></a>. An additional Q&A Session will be held on <b>19.11.</b> Finally, the exam will take place on <b>26.11.</b> or alternatively <b>28.01.</b> More information about the exam can be found <a href="#exam">here</a>.</p>
 			<p>Before the first session, please make sure you completed the <a href="#setup">setup</a>.</p>
 			<p>All materials will be provided in English, as is typical in the data science world. The sessions themselves will be held in German. You can contact me in either language.</p>
