--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
 	<div class="container">
 		<div class="content-plain">
 			<h1>Welcome!</h1>
-			<p>This website contains all relevant information for the Python course offered by <a href="https://www.stads.de/" target="_blank">STADS</a> (Students Association for Data Analysis and Statistics) and the <a href="https://www.uni-mannheim.de/" target="_blank">University of Mannheim</a>.</p>
-			<p>We will have eight course sessions on Tuesdays from <b>24.09.-12.11.</b> in <b>SN 163 Manfred Lautenschläger Hörsaal</b>, from <b>19:00-20:30</b>. It is also possible to participate online via Zoom. You can find the Zoom link in <a href="https://portal2.uni-mannheim.de/portal2/pages/startFlow.xhtml?_flowId=detailView-flow&_flowExecutionKey=e1s1">Portal<sup>2</sup></a>. An additional Q&A Session will be held on <b>19.11.</b> Finally, the exam will take place on <b>26.11.</b> or alternatively <b>28.01.</b> More information about the exam can be found <a href="#exam">here</a>.</p>
+			<p>This website contains all relevant information for the Python course offered by <a href="https://www.stads.de/" target="_blank">STADS</a> (Students' Association for Data Analytics & Statistics) and the <a href="https://www.uni-mannheim.de/" target="_blank">University of Mannheim</a>.</p>
+			<p>The course will consist of eight sessions starting in the week of <b>22.09.2025</b>.</p>
+			<p>Sessions will take place once a week for 90 minutes; the exact day, time, and lecture hall will be announced shortly.</p>
+			<p>Participation will also be possible online via Zoom. The Zoom link will be provided here as soon as it becomes available.</p>
+			<p>An additional Q&A session is planned for the week of <b>17.11.2025</b>.</p>
+			<p>The exam will take place either in the week of <b>24.11.2025</b> or alternatively during the make-up exam week starting <b>31.01.2026</b>.</p>
+			<p>More information about the exam can be found <a href="#exam">here</a>.</p>
 			<p>Before the first session, please make sure you completed the <a href="#setup">setup</a>.</p>
 			<p>All materials will be provided in English, as is typical in the data science world. The sessions themselves will be held in German. You can contact me in either language.</p>
 			<p>This course mainly consist of two parts:</p>
 			<ul>
 				<li><b>Introduction</b> to the topic by working through the <a href="https://www.w3schools.com/python/default.asp">w3schools Python Tutorial</a>. The interactive exercises allow us to learn Python efficiently, while focusing directly on its application.</li>
-				<li><b>Hands-on</b> coding projects to reinforce and deepen your knowledge of the fundamentals you have learned. You will be able to directly apply and combine newly learned material to complete mini-projects provided on the <a href="https://github.com/STADS-Mannheim/python-course-2024">GitHub site</a>. The proportion of hands-on projects will increase over time.</li>
+				<li><b>Hands-on</b> coding projects to reinforce and deepen your knowledge of the fundamentals you have learned. You will be able to directly apply and combine newly learned material to complete mini-projects provided on the <a href="https://github.com/STADS-Mannheim/python-course-2025">GitHub site</a>. The proportion of hands-on projects will increase over time.</li>
 			</ul>
 
 			<h2 id="exam">Exam</h2>
-			<p>The alternate Python course exam will take place on 28 January 2025 at 7 pm.</p>
-			<p>Please register for the exam <a href="https://forms.office.com/e/aUFnmCgzJh">here</a>.</p>
-			<p>Important for WiMa Bachelor students: If you would like to have the course credited as a “Schlüsselqualifikation”, it is mandatory that you register in ILIAS course and register in Portal2 for the exam “Programmierkurs Python”. The registration deadlines of the University of Mannheim apply here.</p>
-			<p>The SQ exam will take place in the lecture hall as a BYOD (Bring Your Own Device) exam. For all others it will be an at-home exam. More detailed information about the exam will be announced in time.</p>
+			<p>The exam for the Python course will be offered on two dates: in the week of <b>24.11.2025</b> and, as an alternative, during the make-up exam week starting <b>31.01.2026</b>.</p>
+			<p>Further details on the exact schedule and the registration process will be announced in due time.</p>
 
 			<h2 id="setup">Setup</h2>
 			<ol>
