--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
 
 			<h2 id="exam">Exam</h2>
 			<p>The exam for the Python course will be offered on two dates: in the week of <b>24.11.2025</b> and, as an alternative, during the make-up exam week starting <b>31.01.2026</b>.</p>
+			<p>Please note that the exam format will differ from previous years.</p>
 			<p>Further details on the exact schedule and the registration process will be announced in due time.</p>
 
 			<h2 id="setup">Setup</h2>
 			<ol>
-				<li><b>Python.</b> We will be using Python 3.12 for this course. There are many ways to install Python. If you haven't done so yet, you could use <a href="https://docs.anaconda.com/miniconda/">Miniconda</a> or install Python <a href="https://www.python.org/downloads/">globally</a>.</li>
+				<li><b>Python.</b> We will be using Python 3.13 for this course. There are many ways to install Python. If you haven't done so yet, you could use <a href="https://docs.anaconda.com/miniconda/">Miniconda</a> or install Python <a href="https://www.python.org/downloads/">globally</a>.</li>
 				<li><b>VS Code.</b> We will be working a lot with Jupyter Notebooks. You can use Jupyter Notebooks in your browser, but it is recommended to use <a href="https://code.visualstudio.com/download">Visual Studio Code</a>. Make sure to install the <i>Python</i> and <i>Jupyter</i> Extensions in VS Code.</li>
-				<li><b>Git.</b> All code will be provided in a GitHub repository<br><span class="code">https://github.com/STADS-Mannheim/python-course-2024.git</span><br>If you haven't already done so yet, you can install Git as described below. Alternatively, you may find it easier to use <a href="https://desktop.github.com/download/">Github Desktop</a>.
+				<li><b>Git.</b> All code will be provided in a GitHub repository<br><span class="code">https://github.com/STADS-Mannheim/python-course-2025.git</span><br>If you haven't already done so yet, you can install Git as described below. Alternatively, you may find it easier to use <a href="https://desktop.github.com/download/">Github Desktop</a>.
 					<ul>
 						<li>Windows: Download <a href="https://community.chocolatey.org/packages/git">Git for Windows</a> or just type in your admin powershell<br><span class="code">choco install git</span></li>
 						<li>Mac: Download <a href="https://formulae.brew.sh/formula/git">Git for Mac</a> or just type in your terminal<br><span class="code">brew install git</span></li>
