--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 		<div class="content-plain">
 			<h1>Welcome!</h1>
 			<p>This website contains all relevant information for the Python course offered by <a href="https://www.stads.de/" target="_blank">STADS</a> (Students' Association for Data Analytics & Statistics) and the <a href="https://www.uni-mannheim.de/" target="_blank">University of Mannheim</a>.</p>
-			<p>The course will consist of eight sessions starting in the week of <b>22.09.2025</b>.</p>
-			<p>Sessions will take place once a week for 90 minutes; the exact day, time, and lecture hall will be announced shortly.</p>
+			<p>The course will consist of eight sessions starting on <b>23.09.2025</b>, meeting once a week on <b>Tuesdays from 19:00 to 20:30</b>.</p>
 			<p>Participation will also be possible online via Zoom. The Zoom link will be provided here as soon as it becomes available.</p>
 			<p>An additional Q&A session is planned for the week of <b>17.11.2025</b>.</p>
 			<p>The exam will take place either in the week of <b>24.11.2025</b> or alternatively during the make-up exam week starting <b>31.01.2026</b>.</p>
 			<p>More information about the exam can be found <a href="#exam">here</a>.</p>
 			<p>Before the first session, please make sure you completed the <a href="#setup">setup</a>.</p>
 			<p>All materials will be provided in English, as is typical in the data science world. The sessions themselves will be held in German. You can contact me in either language.</p>
+			<p>To register for the course or to join the mailing list, please use this form: <a href="https://forms.cloud.microsoft/e/qFjWdsy014">Registration Form</a></p>
+			<p>If you want to receive credit points for this course as a "Schlüsselqualifikation", please register via <b>Portal²</b>.</p>
 			<p>This course mainly consist of two parts:</p>
 			<ul>
 				<li><b>Introduction</b> to the topic by working through the <a href="https://www.w3schools.com/python/default.asp">w3schools Python Tutorial</a>. The interactive exercises allow us to learn Python efficiently, while focusing directly on its application.</li>
