Update form link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p>More information about the exam can be found <a href="#exam">here</a>.</p>
 			<p>Before the first session, please make sure you completed the <a href="#setup">setup</a>.</p>
 			<p>All materials will be provided in English, as is typical in the data science world. The sessions themselves will be held in German. You can contact me in either language.</p>
-			<p>To register for the course or to join the mailing list, please use this form: <a href="https://forms.cloud.microsoft/Pages/ResponsePage.aspx?id=RqmXPyiPoU6G399hkc8qF5tny3Dt4QVIiHxdwJjrH-5UNFI4UkhDN0I4NVNVNkVZQUVITEYwRkdLUi4u">Registration Form</a></p>
+			<p>To register for the course or to join the mailing list, please use this form: <a href="https://forms.cloud.microsoft/e/qFjWdsy014" target="_blank">Registration Form</a></p>
 			<p>If you want to receive credit points for this course as a "Schlüsselqualifikation", please register via <b>Portal²</b>.</p>
 			<p>This course mainly consist of two parts:</p>
 			<ul>
