--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
             <h1>Questions</h1>
             <p>In case of any questions, feel free to contact us via email: <a href="mailto:pythonkurs@stads.de">pythonkurs@stads.de</a></p>
 
-            <h1>Feedback</h1>
-            <p>Your feedback is very valuable in improving the organization, structure, and content of this course. Please use this <a href="https://forms.office.com/e/2x9dQAW00G">form</a> to leave any feedback (positive or negative). This form is anonymous, unless you specifically choose to leave your email address.<br>Thank you very much!</p>
+            <!-- <h1>Feedback</h1>
+            <p>Your feedback is very valuable in improving the organization, structure, and content of this course. Please use this <a href="https://forms.office.com/e/2x9dQAW00G">form</a> to leave any feedback (positive or negative). This form is anonymous, unless you specifically choose to leave your email address.<br>Thank you very much!</p> -->
 		</div>
 	</div>
 	<div w3-include-html="/assets/html/footer.html" class="footer"></div>
