Add Lecture Hall

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="content-plain">
 			<h1>Welcome!</h1>
 			<p>This website contains all relevant information for the Python course offered by <a href="https://www.stads.de/" target="_blank">STADS</a> (Students' Association for Data Analytics & Statistics) and the <a href="https://www.uni-mannheim.de/" target="_blank">University of Mannheim</a>.</p>
-			<p>The course will consist of eight sessions starting on <b>23.09.2025</b>, meeting once a week on <b>Tuesdays from 19:00 to 20:30</b>.</p>
+			<p>The course will consist of eight sessions starting on <b>23.09.2025</b>, meeting once a week on <b>Tuesdays from 19:00 to 20:30</b> in Lecture Hall A101 (Building B6).</p>
 			<p>Participation will also be possible online via Zoom. The Zoom link will be provided here as soon as it becomes available.</p>
 			<p>An additional Q&A session is planned for the week of <b>17.11.2025</b>.</p>
 			<p>The exam will take place either in the week of <b>24.11.2025</b> or alternatively during the make-up exam week starting <b>31.01.2026</b>.</p>
