Added Zoom link

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 			<h1>Welcome!</h1>
 			<p>This website contains all relevant information for the Python course offered by <a href="https://www.stads.de/" target="_blank">STADS</a> (Students' Association for Data Analytics & Statistics) and the <a href="https://www.uni-mannheim.de/" target="_blank">University of Mannheim</a>.</p>
 			<p>The course will consist of eight sessions starting on <b>23.09.2025</b>, meeting once a week on <b>Tuesdays from 19:00 to 20:30</b> in <b>Lecture Hall A001 (Building B6)</b>.</p>
-			<p>Participation will also be possible online via Zoom. The Zoom link will be provided here as soon as it becomes available.</p>
-			<p>An additional Q&A session is planned for the week of <b>17.11.2025</b>.</p>
-			<p>The exam will take place either in the week of <b>24.11.2025</b> or alternatively during the make-up exam week starting <b>31.01.2026</b>.</p>
+			<p>Participation will also be possible online via <a href="https://uni-mannheim.zoom-x.de/j/68144485036?pwd=IYxaouUeMvpIl6tlZuxVd0dtUSIzUN.1" target="_blank" rel="noopener noreferrer">Zoom</a>.</p>
+			<p>An additional Q&A session is scheduled for <b>18.11.2025</b>.</p>
+			<p>The exam will be held on <b>25.11.2025</b>, or alternatively during the make-up exam week starting on <b>31.01.2026</b>.</p>
 			<p>More information about the exam can be found <a href="#exam">here</a>.</p>
 			<p>To register for the course or to join the mailing list, please use this form: <a href="https://forms.cloud.microsoft/e/qFjWdsy014" target="_blank" rel="noopener noreferrer">Registration Form</a></p>
 			<p>If you want to receive credit points for this course as a "Schlüsselqualifikation", please register via <b>Portal²</b>.</p>
