Further exam information

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h1>Welcome!</h1>
 			<p>This website contains all relevant information for the Python course offered by <a href="https://www.stads.de/" target="_blank">STADS</a> (Students' Association for Data Analytics & Statistics) and the <a href="https://www.uni-mannheim.de/" target="_blank">University of Mannheim</a>.</p>
 			<p>The course will consist of eight sessions starting on <b>23.09.2025</b>, meeting once a week on <b>Tuesdays from 19:00 to 20:30</b> in <b>Lecture Hall A001 (Building B6)</b>.</p>
-			<p>Participation will also be possible online via <a href="https://uni-mannheim.zoom-x.de/j/68144485036?pwd=IYxaouUeMvpIl6tlZuxVd0dtUSIzUN.1" target="_blank" rel="noopener noreferrer">Zoom</a>.</p>
+			<p>Participation will also be possible online via Zoom (the Zoom link can be found in Portal² or <a href="https://uni-mannheim.zoom-x.de/j/68144485036?pwd=IYxaouUeMvpIl6tlZuxVd0dtUSIzUN.1" target="_blank" rel="noopener noreferrer">here</a>).</p>
 			<p>An additional Q&A session is scheduled for <b>18.11.2025</b>.</p>
 			<p>The exam will be held on <b>25.11.2025</b>, or alternatively during the make-up exam week starting on <b>31.01.2026</b>.</p>
 			<p>More information about the exam can be found <a href="#exam">here</a>.</p>
@@ -30,7 +30,8 @@
 			</ul>
 
 			<h2 id="exam">Exam</h2>
-			<p>The exam for the Python course will be offered on two dates: in the week of <b>24.11.2025</b> and, as an alternative, during the make-up exam week starting <b>31.01.2026</b>.</p>
+			<p>The exam for the Python course will be offered on two dates: on <b>25.11.2025</b> and, as an alternative, during the make-up exam week starting <b>31.01.2026</b>.</p>
+			<p>To be eligible, students must participate in at least 4 out of the 8 in-person sessions. Attendance will be recorded.</p>
 			<p>Please note that the exam format will differ from previous years.</p>
 			<p>Further details on the exact schedule and the registration process will be announced in due time.</p>
 
