--- a/index.html
+++ b/index.html
@@ -13,27 +13,66 @@
 	<div class="container">
 		<div class="content-plain">
 			<h1>Welcome!</h1>
+
 			<p>This website contains all relevant information for the Python course offered by <a href="https://www.stads.de/" target="_blank">STADS</a> (Students' Association for Data Analytics & Statistics) and the <a href="https://www.uni-mannheim.de/" target="_blank">University of Mannheim</a>.</p>
-			<p>The course will consist of eight sessions starting on <b>23.09.2025</b>, meeting once a week on <b>Tuesdays from 19:00 to 20:30</b> in <b>Lecture Hall A001 (Building B6)</b>.</p>
-			<p>Participation will also be possible online via Zoom (the Zoom link can be found in Portal² or <a href="https://uni-mannheim.zoom-x.de/j/68144485036?pwd=IYxaouUeMvpIl6tlZuxVd0dtUSIzUN.1" target="_blank" rel="noopener noreferrer">here</a>).</p>
-			<p>An additional Q&A session is scheduled for <b>18.11.2025</b>.</p>
-			<p>The exam will be held on <b>25.11.2025</b>, or alternatively during the make-up exam week starting on <b>31.01.2026</b>.</p>
-			<p>More information about the exam can be found <a href="#exam">here</a>.</p>
-			<p>To register for the course or to join the mailing list, please use this form: <a href="https://forms.cloud.microsoft/e/qFjWdsy014" target="_blank" rel="noopener noreferrer">Registration Form</a></p>
-			<p>If you want to receive credit points for this course as a "Schlüsselqualifikation", please register via <b>Portal²</b>.</p>
+
+			<h2>Course Schedule</h2>
+			<ul>
+				<li><b>Start:</b> 23.09.2025</li>
+				<li><b>Sessions:</b> 8 weekly meetings</li>
+				<li><b>When:</b> Tuesdays, 19:00 – 20:30</li>
+				<li><b>Where:</b> Lecture Hall A001 (Building B6)</li>
+				<li><b>Online:</b> Participation via Zoom</li>
+			</ul>
+
+			<p><b>Zoom Access:</b></p>
+			<ul>
+				<li><b>Meeting ID:</b> 681 4448 5036</li>
+				<li><b>Passcode:</b> 641570</li>
+			</ul>
+
+			<p style="color:darkred; font-weight:bold;">
+			Note: The Zoom Meeting ID and Passcode will be updated weekly.  
+			Please check this website or Portal² before each session for the latest information.
+			</p>
+
+			<p><b>Additional Q&A session:</b> 18.11.2025</p>
+
+			<hr>
+
+			<h2 id="exam">Exam</h2>
+			<ul>
+				<li><b>Main Exam:</b> 25.11.2025</li>
+				<li><b>Make-up Exam:</b> week from 31.01.2026</li>
+			</ul>
+
+			<p>
+				<b>Requirements:</b> Participation in at least 4 out of 8 in-person sessions (attendance will be recorded).
+			</p>
+			<p>Note: The exam format will differ from previous years. More details will follow.</p>
+
+			<hr>
+
+			<h2>Registration</h2>
+			<ul>
+				<li>Register for the course / mailing list via this 
+					<a href="https://forms.cloud.microsoft/e/qFjWdsy014" target="_blank" rel="noopener noreferrer">
+					Registration Form
+					</a>
+				</li>
+				<li>If you want to receive credit points as a "Schlüsselqualifikation", register via <b>Portal²</b>.</li>
+			</ul>
+
 			<p>Before the first session, please make sure you completed the <a href="#setup">setup</a>.</p>
+
 			<p>All materials will be provided in English, as is typical in the data science world. The sessions themselves will be held in German. You can contact me in either language.</p>
+
+			<h2>Course Structure</h2>
 			<p>This course mainly consist of two parts:</p>
 			<ul>
 				<li><b>Introduction</b> to the topic by working through the <a href="https://www.w3schools.com/python/default.asp">w3schools Python Tutorial</a>. The interactive exercises allow us to learn Python efficiently, while focusing directly on its application.</li>
 				<li><b>Hands-on</b> coding projects to reinforce and deepen your knowledge of the fundamentals you have learned. You will be able to directly apply and combine newly learned material to complete mini-projects provided on the <a href="https://github.com/STADS-Mannheim/python-course-2025">GitHub site</a>. The proportion of hands-on projects will increase over time.</li>
 			</ul>
-
-			<h2 id="exam">Exam</h2>
-			<p>The exam for the Python course will be offered on two dates: on <b>25.11.2025</b> and, as an alternative, during the make-up exam week starting <b>31.01.2026</b>.</p>
-			<p>To be eligible, students must participate in at least 4 out of the 8 in-person sessions. Attendance will be recorded.</p>
-			<p>Please note that the exam format will differ from previous years.</p>
-			<p>Further details on the exact schedule and the registration process will be announced in due time.</p>
 
 			<h2 id="setup">Setup</h2>
 			<ol>
