Edit Zoom Meeting Code

--- a/index.html
+++ b/index.html
@@ -1,92 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>STADS Python Course HWS 2025</title>
-	<link rel="stylesheet" href="/assets/css/style.css">
-	<script src="https://www.w3schools.com/lib/w3data.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>STADS Python Course HWS 2025</title>
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <script src="https://www.w3schools.com/lib/w3data.js"></script>
     <link rel="icon" href="/assets/img/stads.png" type="image/x-icon" />
-</head>
-<body>
-	<div w3-include-html="assets/html/header.html" class="header"></div>
-	<div class="container">
-		<div class="content-plain">
-			<h1>Welcome!</h1>
+  </head>
+  <body>
+    <div w3-include-html="assets/html/header.html" class="header"></div>
+    <div class="container">
+      <div class="content-plain">
+        <h1>Welcome!</h1>
 
-			<p>This website contains all relevant information for the Python course offered by <a href="https://www.stads.de/" target="_blank">STADS</a> (Students' Association for Data Analytics & Statistics) and the <a href="https://www.uni-mannheim.de/" target="_blank">University of Mannheim</a>.</p>
+        <p>
+          This website contains all relevant information for the Python course
+          offered by
+          <a href="https://www.stads.de/" target="_blank">STADS</a> (Students'
+          Association for Data Analytics & Statistics) and the
+          <a href="https://www.uni-mannheim.de/" target="_blank"
+            >University of Mannheim</a
+          >.
+        </p>
 
-			<h2>Course Schedule</h2>
-			<ul>
-				<li><b>Start:</b> 23.09.2025</li>
-				<li><b>Sessions:</b> 8 weekly meetings</li>
-				<li><b>When:</b> Tuesdays, 19:00 – 20:30</li>
-				<li><b>Where:</b> Lecture Hall A101 (Building B6)</li>
-				<li><b>Online:</b> Participation via Zoom</li>
-			</ul>
+        <h2>Course Schedule</h2>
+        <ul>
+          <li><b>Start:</b> 23.09.2025</li>
+          <li><b>Sessions:</b> 8 weekly meetings</li>
+          <li><b>When:</b> Tuesdays, 19:00 – 20:30</li>
+          <li><b>Where:</b> Lecture Hall A101 (Building B6)</li>
+          <li><b>Online:</b> Participation via Zoom</li>
+        </ul>
 
-			<p><b>Zoom Access:</b></p>
-			<ul>
-				<li><b>Meeting ID:</b> 647 7033 0087</li>
-				<li><b>Passcode:</b> 755089</li>
-			</ul>
+        <p><b>Zoom Access:</b></p>
+        <ul>
+          <li><b>Meeting ID:</b> 674 4162 6792</li>
+          <li><b>Passcode:</b> 774622</li>
+        </ul>
 
-			<p style="color:darkred; font-weight:bold;">
-			Note: The Zoom Meeting ID and Passcode will be updated weekly.  
-			Please check this website or Portal² before each session for the latest information.
-			</p>
+        <p style="color: darkred; font-weight: bold">
+          Note: The Zoom Meeting ID and Passcode will be updated weekly. Please
+          check this website or Portal² before each session for the latest
+          information.
+        </p>
 
-			<p><b>Additional Q&A session:</b> 18.11.2025</p>
+        <p><b>Additional Q&A session:</b> 18.11.2025</p>
 
-			<h2 id="exam">Exam</h2>
-			<ul>
-				<li><b>Main Exam:</b> 25.11.2025</li>
-				<li><b>Make-up Exam:</b> week from 31.01.2026</li>
-			</ul>
+        <h2 id="exam">Exam</h2>
+        <ul>
+          <li><b>Main Exam:</b> 25.11.2025</li>
+          <li><b>Make-up Exam:</b> week from 31.01.2026</li>
+        </ul>
 
-			<p>
-				<b>Requirements:</b> Participation in at least 4 out of 8 in-person sessions (attendance will be recorded).
-			</p>
-			<p>Note: The exam format will differ from previous years. More details will follow.</p>
+        <p>
+          <b>Requirements:</b> Participation in at least 4 out of 8 in-person
+          sessions (attendance will be recorded).
+        </p>
+        <p>
+          Note: The exam format will differ from previous years. More details
+          will follow.
+        </p>
 
-			<h2>Registration</h2>
-			<ul>
-				<li>Register for the course / mailing list via this 
-					<a href="https://forms.cloud.microsoft/e/qFjWdsy014" target="_blank" rel="noopener noreferrer">
-					Registration Form
-					</a>
-				</li>
-				<li>If you want to receive credit points as a "Schlüsselqualifikation", register via <b>Portal²</b>.</li>
-			</ul>
+        <h2>Registration</h2>
+        <ul>
+          <li>
+            Register for the course / mailing list via this
+            <a
+              href="https://forms.cloud.microsoft/e/qFjWdsy014"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Registration Form
+            </a>
+          </li>
+          <li>
+            If you want to receive credit points as a "Schlüsselqualifikation",
+            register via <b>Portal²</b>.
+          </li>
+        </ul>
 
-			<p>Before the first session, please make sure you completed the <a href="#setup">setup</a>.</p>
+        <p>
+          Before the first session, please make sure you completed the
+          <a href="#setup">setup</a>.
+        </p>
 
-			<h2>Course Structure</h2>
-			<p>This course mainly consist of two parts:</p>
-			<ul>
-				<li><b>Introduction</b> to the topic by working through the <a href="https://www.w3schools.com/python/default.asp">w3schools Python Tutorial</a>. The interactive exercises allow us to learn Python efficiently, while focusing directly on its application.</li>
-				<li><b>Hands-on</b> coding projects to reinforce and deepen your knowledge of the fundamentals you have learned. You will be able to directly apply and combine newly learned material to complete mini-projects provided on the <a href="https://github.com/STADS-Mannheim/python-course-2025">GitHub site</a>. The proportion of hands-on projects will increase over time.</li>
-			</ul>
+        <h2>Course Structure</h2>
+        <p>This course mainly consist of two parts:</p>
+        <ul>
+          <li>
+            <b>Introduction</b> to the topic by working through the
+            <a href="https://www.w3schools.com/python/default.asp"
+              >w3schools Python Tutorial</a
+            >. The interactive exercises allow us to learn Python efficiently,
+            while focusing directly on its application.
+          </li>
+          <li>
+            <b>Hands-on</b> coding projects to reinforce and deepen your
+            knowledge of the fundamentals you have learned. You will be able to
+            directly apply and combine newly learned material to complete
+            mini-projects provided on the
+            <a href="https://github.com/STADS-Mannheim/python-course-2025"
+              >GitHub site</a
+            >. The proportion of hands-on projects will increase over time.
+          </li>
+        </ul>
 
-			<p>All materials will be provided in English, as is typical in the data science world. The sessions themselves will be held in German. You can contact me in either language.</p>
+        <p>
+          All materials will be provided in English, as is typical in the data
+          science world. The sessions themselves will be held in German. You can
+          contact me in either language.
+        </p>
 
-			<h2 id="setup">Setup</h2>
-			<ol>
-				<li><b>Python.</b> We will be using Python 3.13 for this course. There are many ways to install Python. If you haven't done so yet, you could use <a href="https://docs.anaconda.com/miniconda/">Miniconda</a> or install Python <a href="https://www.python.org/downloads/">globally</a>.</li>
-				<li><b>VS Code.</b> We will be working a lot with Jupyter Notebooks. You can use Jupyter Notebooks in your browser, but it is recommended to use <a href="https://code.visualstudio.com/download">Visual Studio Code</a>. Make sure to install the <i>Python</i> and <i>Jupyter</i> Extensions in VS Code.</li>
-				<li><b>Git.</b> All code will be provided in a GitHub repository<br><span class="code">https://github.com/STADS-Mannheim/python-course-2025.git</span><br>If you haven't already done so yet, you can install Git as described below. <!-- Alternatively, you may find it easier to use <a href="https://desktop.github.com/download/">Github Desktop</a>. -->
-					<ul>
-						<li>Windows: Download <a href="https://community.chocolatey.org/packages/git">Git for Windows</a> or just type in your admin powershell<br><span class="code">choco install git</span></li>
-						<li>Mac: Download <a href="https://formulae.brew.sh/formula/git">Git for Mac</a> or just type in your terminal<br><span class="code">brew install git</span></li>
-					</ul>
-					If you are not familiar with Git, you can find a very short guide <a href="https://rogerdudler.github.io/git-guide/">here</a>.
-				</li>
-			</ol>
-		</div>
-	</div>
-	<div w3-include-html="assets/html/footer.html" class="footer"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
-</body>
+        <h2 id="setup">Setup</h2>
+        <ol>
+          <li>
+            <b>Python.</b> We will be using Python 3.13 for this course. There
+            are many ways to install Python. If you haven't done so yet, you
+            could use
+            <a href="https://docs.anaconda.com/miniconda/">Miniconda</a> or
+            install Python
+            <a href="https://www.python.org/downloads/">globally</a>.
+          </li>
+          <li>
+            <b>VS Code.</b> We will be working a lot with Jupyter Notebooks. You
+            can use Jupyter Notebooks in your browser, but it is recommended to
+            use
+            <a href="https://code.visualstudio.com/download"
+              >Visual Studio Code</a
+            >. Make sure to install the <i>Python</i> and
+            <i>Jupyter</i> Extensions in VS Code.
+          </li>
+          <li>
+            <b>Git.</b> All code will be provided in a GitHub repository<br /><span
+              class="code"
+              >https://github.com/STADS-Mannheim/python-course-2025.git</span
+            ><br />If you haven't already done so yet, you can install Git as
+            described below.
+            <!-- Alternatively, you may find it easier to use <a href="https://desktop.github.com/download/">Github Desktop</a>. -->
+            <ul>
+              <li>
+                Windows: Download
+                <a href="https://community.chocolatey.org/packages/git"
+                  >Git for Windows</a
+                >
+                or just type in your admin powershell<br /><span class="code"
+                  >choco install git</span
+                >
+              </li>
+              <li>
+                Mac: Download
+                <a href="https://formulae.brew.sh/formula/git">Git for Mac</a>
+                or just type in your terminal<br /><span class="code"
+                  >brew install git</span
+                >
+              </li>
+            </ul>
+            If you are not familiar with Git, you can find a very short guide
+            <a href="https://rogerdudler.github.io/git-guide/">here</a>.
+          </li>
+        </ol>
+      </div>
+    </div>
+    <div w3-include-html="assets/html/footer.html" class="footer"></div>
+    <script>
+      w3IncludeHTML();
+    </script>
+  </body>
 </html>
