Edited Zoom meeting

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         <p><b>Zoom Access:</b></p>
         <ul>
-          <li><b>Meeting ID:</b> 680 000 73443</li>
-          <li><b>Passcode:</b> 880147</li>
+          <li><b>Meeting ID:</b> 685 728 68046</li>
+          <li><b>Passcode:</b> 710169</li>
         </ul>
 
         <p style="color: darkred; font-weight: bold">
@@ -50,6 +50,18 @@
         <h2 id="exam">Exam</h2>
         <ul>
           <li><b>Main Exam:</b> 25.11.2025</li>
+
+          <li>
+            <b>Registration:</b>
+            <a
+              href="https://forms.cloud.microsoft/e/mQZWFkRhdJ"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Registration Form
+            </a>
+          </li>
+
           <li><b>Make-up Exam:</b> week from 31.01.2026</li>
         </ul>
 
